[tool.poetry]
name = "research-paper-fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed and identify pharma/biotech company authors"
authors = ["Suryakant <suryakant4803@gmail.com>"]
readme = "README.md"
packages = [{include = "research_paper_fetcher"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"
pandas = "^2.0.0"
lxml = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
get-papers-list = "research_paper_fetcher.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"